# blinder_weiss_1976

./: .envrc  .gitignore  README.md  devenv.nix  devenv.yaml  main.py  pyproject.toml
ben_moll_code/: lifecycle.eps  lifecycle.m
code/: README.md  acs.do  backward_vfi.ipynb  backward_vfi.py  blinder_weiss_feb13.py  educ5.gph  fd_hjb copy 2.ipynb  fd_hjb copy.ipynb  fd_hjb.ipynb  fd_hjb_working.ipynb  shooting.ipynb  shooting3.ipynb  us_profile.do  value_function_iteration.ipynb
code/.ipynb_checkpoints/: backward_vfi-Copy1-checkpoint.ipynb  backward_vfi-checkpoint.ipynb  shooting-checkpoint.ipynb  value_function_iteration-checkpoint.ipynb
code/jax/: BELLMAN_STRATEGY.md  README.md  SOLUTION_STRATEGY.md
matlab_code/: finite_horizon_stochastic_consumption_savings.m
nix/: project.nix
nix/modules/: base.nix  cuda-dev.nix  gpu-runtime.nix  python-uv.nix  r-positron-nix.nix  r-positron-renv.nix
old_code/: acs.do  educ2.gph  educ3.gph  educ4.gph  shooting_2.ipynb  us_profile.do
old_code/.ipynb_checkpoints/: shooting-checkpoint.ipynb
slides/: econ285_presentation.aux  econ285_presentation.bbl  econ285_presentation.bcf  econ285_presentation.blg  econ285_presentation.fdb_latexmk  econ285_presentation.fls  econ285_presentation.nav  econ285_presentation.run.xml  econ285_presentation.tex
tests/: conftest.py  test_bellman.py  test_model.py  test_solver.py  test_transcription.py
writeup/econ281_proposal/: blinder_weiss_project.aux  blinder_weiss_project.bbl  blinder_weiss_project.bcf  blinder_weiss_project.blg  blinder_weiss_project.fdb_latexmk  blinder_weiss_project.fls  blinder_weiss_project.run.xml  blinder_weiss_project.tex  blinder_weiss_project_bib.bib  econ281_proposal.aux  econ281_proposal.bbl  econ281_proposal.bcf  econ281_proposal.blg  econ281_proposal.fls  (+3 more)
(+20 files in other folders)
